--- a/frontend/public/locales/tr/translation.json
+++ b/frontend/public/locales/tr/translation.json
@@ -26,6 +26,12 @@
   "final_cta_title": "Sıradaki Trend Siz Olun.",
   "final_cta_subtitle": "Platformları birleştirmeyi bırakın. Pazarı domine etmeye başlayın. Esnek planlarımızı keşfedin ve imparatorluğunuzun temelini atın.",
   "final_cta_button": "Bugün Ücretsiz Başlayın",
+  "nav_product": "Ürün",
+  "nav_solutions": "Çözümler",
+  "nav_resources": "Kaynaklar",
+  "nav_pricing": "Fiyatlandırma",
+  "nav_about": "Hakkımızda",
+  "nav_contact": "İletişim",
   "product": "Ürün",
   "solutions": "Çözümler",
   "resources": "Kaynaklar",
@@ -41,6 +47,22 @@
   "start_free": "Ücretsiz Başla",
   "about": "Hakkımızda",
   "contact": "İletişim",
+  "footer_subtitle": "Yapay zeka ile e-ticaret yolculuğunuzu güçlendiriyoruz.",
+  "footer_product_title": "Ürün",
+  "footer_product_features": "Özellikler",
+  "footer_product_solutions": "Çözümler",
+  "footer_product_pricing": "Fiyatlandırma",
+  "footer_product_updates": "Güncellemeler",
+  "footer_company_title": "Şirket",
+  "footer_company_about": "Hakkımızda",
+  "footer_company_careers": "Kariyer",
+  "footer_company_contact": "İletişim",
+  "footer_company_resources": "Kaynaklar",
+  "footer_legal_title": "Yasal",
+  "footer_legal_terms": "Hizmet Şartları",
+  "footer_legal_privacy": "Gizlilik Politikası",
+  "footer_legal_cookies": "Çerez Politikası",
+  "footer_copyright": "© {year} Ekobol. Tüm hakları saklıdır.",
   "solutions": {
     "title": {
       "part1": "Tek Platform,",
