--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -26,6 +26,12 @@
   "final_cta_title": "Be the Next Trend.",
   "final_cta_subtitle": "Stop unifying platforms. Start dominating the market. Discover our flexible plans and lay the foundation of your empire.",
   "final_cta_button": "Start Free Today",
+  "nav_product": "Product",
+  "nav_solutions": "Solutions",
+  "nav_resources": "Resources",
+  "nav_pricing": "Pricing",
+  "nav_about": "About Us",
+  "nav_contact": "Contact Us",
   "product": "Product",
   "solutions": "Solutions",
   "resources": "Resources",
@@ -41,6 +47,22 @@
   "start_free": "Start Free",
   "about": "About Us",
   "contact": "Contact Us",
+  "footer_subtitle": "Powering your e-commerce journey with artificial intelligence.",
+  "footer_product_title": "Product",
+  "footer_product_features": "Features",
+  "footer_product_solutions": "Solutions",
+  "footer_product_pricing": "Pricing",
+  "footer_product_updates": "Updates",
+  "footer_company_title": "Company",
+  "footer_company_about": "About Us",
+  "footer_company_careers": "Careers",
+  "footer_company_contact": "Contact Us",
+  "footer_company_resources": "Resources",
+  "footer_legal_title": "Legal",
+  "footer_legal_terms": "Terms of Service",
+  "footer_legal_privacy": "Privacy Policy",
+  "footer_legal_cookies": "Cookie Policy",
+  "footer_copyright": "© {year} Ekobol. All rights reserved.",
   "solutions": {
     "title": {
       "part1": "One Platform,",
