--- a/frontend/public/locales/tr/pricing.json
+++ b/frontend/public/locales/tr/pricing.json
@@ -76,7 +76,7 @@
       "subtitle": "Stratejinizi belirlemeden önce bilmeniz gerekenler.",
       "questions": [
         {
-          "q": ""% Kârdan" tam olarak ne anlama geliyor?",
+          "q": "\"% Kârdan\" tam olarak ne anlama geliyor?",
           "a": "Kâr, ürün maliyetleri ve pazar yeri komisyonları düşüldükten sonraki net gelirdir. Finans panelinizde her kuruşu şeffaf bir şekilde gösteriyoruz. Gizli hiçbir şey yok."
         },
         {
