--- a/frontend/public/locales/en/home.json
+++ b/frontend/public/locales/en/home.json
@@ -22,6 +22,7 @@
   "playground_desc_content": "Rewrite the rules of the street. Designed for urban exploration, the 'Nebula' model combines breathable composite mesh and a reactive foam sole. With every step, don't just walk, flow into the future.",
   "playground_price_title": "3. AI Price Supremacy",
   "playground_price_subtitle": "Market Leader Price",
+  "playground_price": "$250",
   "playground_reset_button": "Reset",
   "final_cta_title": "Be the Next Trend.",
   "final_cta_subtitle": "Stop unifying platforms. Start dominating the market. Discover our flexible plans and lay the foundation of your empire.",
