--- a/frontend/public/locales/tr/home.json
+++ b/frontend/public/locales/tr/home.json
@@ -22,6 +22,7 @@
   "playground_desc_content": "Sokakların kurallarını yeniden yaz. Kentsel keşifler için tasarlanan 'Nebula' modeli, nefes alabilen kompozit örgü ve reaktif köpük tabanı bir araya getirir. Her adımda sadece yürüme, geleceğe ak.",
   "playground_price_title": "3. YZ Fiyat Hakimiyeti",
   "playground_price_subtitle": "Pazar Lideri Fiyat",
+  "playground_price": "₺4,950",
   "playground_reset_button": "Sıfırla",
   "final_cta_title": "Sıradaki Trend Siz Olun.",
   "final_cta_subtitle": "Platformları birleştirmeyi bırakın. Pazarı domine etmeye başlayın. Esnek planlarımızı keşfedin ve imparatorluğunuzun temelini atın.",
