--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -35,5 +35,4 @@
   "footer_legal_terms": "Terms of Service",
   "footer_legal_privacy": "Privacy Policy",
   "footer_legal_cookies": "Cookie Policy",
-  "footer_copyright": "© {year} Ekobol. All rights reserved."
-}
+  "footer_copyright": "© {year} Ekobol. A Me the Tech brand. All rights reserved."}
