--- a/frontend/public/locales/tr/common.json
+++ b/frontend/public/locales/tr/common.json
@@ -35,5 +35,4 @@
   "footer_legal_terms": "Hizmet Şartları",
   "footer_legal_privacy": "Gizlilik Politikası",
   "footer_legal_cookies": "Çerez Politikası",
-  "footer_copyright": "© {year} Ekobol. Tüm hakları saklıdır."
-}
+  "footer_copyright": "© {year} Ekobol. Me the Tech markasıdır. Tüm hakları saklıdır."}
