--- a/frontend/public/locales/en/home.json
+++ b/frontend/public/locales/en/home.json
@@ -27,6 +27,58 @@
   "final_cta_title": "Be the Next Trend.",
   "final_cta_subtitle": "Stop unifying platforms. Start dominating the market. Discover our flexible plans and lay the foundation of your empire.",
   "final_cta_button": "Start Free Today",
-  "automation_nexus_title": "EKOBOL COMMAND CENTER: AI AUTOMATION NEXUS",
-  "automation_nexus_subtitle": "Transform your business processes with Ekobol's AI-powered automation, maximize efficiency, and leave your competitors behind. An interactive experience covering all site capabilities and workflows."
+  "automation_nexus_title": "Ekobol AI Automation Command Center",
+  "automation_nexus_subtitle": "Transform your business processes with Ekobol's AI-powered automation, maximize efficiency, and leave your competitors behind. An interactive experience covering all site capabilities and workflows.",
+  "magic_bento": {
+    "forge": {
+      "label": "INTEGRATE",
+      "title": "AI Product Imaging & Content",
+      "description": "Connect marketplaces and upload products. Let AI generate stunning visuals and compelling descriptions."
+    },
+    "amplify": {
+      "label": "OPTIMIZE",
+      "title": "Smart Marketing & Pricing",
+      "description": "Unleash AI to create hypnotic campaigns and execute unbeatable pricing strategies."
+    },
+    "dominate": {
+      "label": "MANAGE",
+      "title": "Unified Command Center",
+      "description": "Rule your empire from a single panel. Dominate the market with real-time data."
+    },
+    "seo_analysis": {
+      "label": "ANALYSIS",
+      "title": "SEO & Trend Analysis",
+      "description": "Before launch, AI analyzes market trends, SEO keywords, and competitor strategies to position your product for maximum impact."
+    },
+    "competitor_analysis": {
+      "label": "ANALYSIS",
+      "title": "Competitor Intelligence",
+      "description": "Gain an unfair advantage with deep insights into competitor pricing, marketing, and product strategies."
+    },
+    "ai_descriptions": {
+      "label": "CONTENT",
+      "title": "AI-Optimized Descriptions",
+      "description": "Generate compelling, keyword-rich product descriptions tailored to your brand voice and target audience."
+    },
+    "ai_visuals": {
+      "label": "VISUALS",
+      "title": "AI-Generated Product Visuals",
+      "description": "From a simple idea or sketch, Ekobol AI creates stunning, photorealistic product images and visualizations."
+    },
+    "ai_learning": {
+      "label": "OPTIMIZATION",
+      "title": "Continuous AI Learning",
+      "description": "Our AI agents constantly monitor market data, learn from performance, and autonomously refine strategies for ongoing growth."
+    },
+    "connectivity": {
+      "label": "CORE",
+      "title": "Marketplace Integration",
+      "description": "Seamlessly connect and manage all your sales channels from one central hub."
+    },
+    "insights": {
+      "label": "CORE",
+      "title": "Real-time Analytics",
+      "description": "Gain deep insights into your sales, customers, and market behavior to stay ahead."
+    }
+  }
 }
